# atlas

./: README.md
src/: README.md  README.zh.md  THIRD PARTY OPEN SOURCE SOFTWARE NOTICE.md
src/Samples/: build_all.sh
src/Samples/CompileDemo/: CMakeLists.txt  README.md  README.zh.md  main.cpp
src/Samples/CompileDemo/data/config/: setup.config
src/Samples/DecodeImage/: CMakeLists.txt  README.md  README.zh.md  main.cpp
src/Samples/DecodeImage/AclProcess/: AclProcess.cpp  AclProcess.h
src/Samples/DecodeVideo/: CMakeLists.txt  README.md  README.zh.md  main.cpp
src/Samples/DecodeVideo/CMake/: FindFFMPEG.cmake
src/Samples/DecodeVideo/data/config/: setup.config
src/Samples/DecodeVideo/include/: AclProcess.h  VdecUtils.h  VideoReader.h
src/Samples/DecodeVideo/src/: AclProcess.cpp  VdecUtils.cpp  VideoReader.cpp
src/Samples/DvppCrop/: CMakeLists.txt  README.md  README.zh.md  build.sh  main.cpp
src/Samples/DvppCrop/data/config/: setup.config
src/Samples/EncodeJpeg/: CMakeLists.txt  README.md  README.zh.md  main.cpp
src/Samples/EncodeJpeg/AclProcess/: AclProcess.cpp  AclProcess.h
src/Samples/EncodeJpeg/CommandLine/: CommandLine.h
src/Samples/EncodeJpeg/data/config/: setup.config
src/Samples/EncodeJpeg/data/models/: README.md
src/Samples/EncodeJpeg/data/models/resnet/: aipp_resnet50.cfg
src/Samples/InferClassification/: CMakeLists.txt  README.md  README.zh.md  build.sh  main.cpp
src/Samples/InferClassification/AclProcess/: AclProcess.cpp  AclProcess.h
src/Samples/InferClassification/data/config/: setup.config
src/Samples/InferClassification/data/models/: README.md  README.zh.md
src/Samples/InferClassification/data/models/resnet/: aipp_resnet50.cfg  imagenet1000_clsidx_to_labels.txt
src/Samples/InferObjectDetection/: CMakeLists.txt  README.md  README.zh.md  build.sh  main.cpp
src/Samples/InferObjectDetection/data/config/: setup.config
src/Samples/InferObjectDetection/data/models/: README.md
src/Samples/InferObjectDetection/include/: AclProcess.h  FastMath.h  Yolov3Post.h
src/Samples/InferObjectDetection/src/: AclProcess.cpp  Yolov3Post.cpp
src/Samples/InferOfflineVideo/: CMakeLists.txt  README.md  README.zh.md  build.sh  main.cpp
src/Samples/InferOfflineVideo/Common/: CommandLine.h  Singleton.cpp  Singleton.h
src/Samples/InferOfflineVideo/Module/DataType/: DataType.h
src/Samples/InferOfflineVideo/Module/ModelInfer/: ModelInfer.cpp  ModelInfer.h
src/Samples/InferOfflineVideo/Module/PostProcess/: FastMath.h  PostProcess.cpp  PostProcess.h  Yolov3Post.cpp  Yolov3Post.h
src/Samples/InferOfflineVideo/Module/StreamPuller/: StreamPuller.cpp  StreamPuller.h
src/Samples/InferOfflineVideo/Module/VideoDecoder/: VideoDecoder.cpp  VideoDecoder.h
src/Samples/InferOfflineVideo/data/config/: setup.config
src/Samples/InferOfflineVideo/data/models/: README.zh.md
src/Samples/ascendbase/src/Base/CommandParser/: CommandParser.cpp  CommandParser.h
src/Samples/ascendbase/src/Base/CommonDataType/: CommonDataType.h
src/Samples/ascendbase/src/Base/ConfigParser/: ConfigParser.cpp  ConfigParser.h
src/Samples/ascendbase/src/Base/DvppCommon/: DvppCommon.cpp  DvppCommon.h
src/Samples/ascendbase/src/Base/DvppCommonDevice/: DvppCommonDevice.cpp  DvppCommonDevice.h
src/Samples/ascendbase/src/Base/ErrorCode/: ErrorCode.cpp  ErrorCode.h
src/Samples/ascendbase/src/Base/FileManager/: FileManager.cpp  FileManager.h
src/Samples/ascendbase/src/Base/Framework/ModelProcess/: ModelProcess.cpp  ModelProcess.h
src/Samples/ascendbase/src/Base/Framework/ModuleManager/: ModuleBase.cpp  ModuleBase.h  ModuleManager.cpp  ModuleManager.h
src/Samples/ascendbase/src/Base/Log/: Log.cpp  Log.h
src/Samples/ascendbase/src/Base/ResourceManager/: ResourceManager.cpp  ResourceManager.h
src/Samples/ascendbase/src/Base/SingleOpProcess/: SingleOpProcess.cpp  SingleOpProcess.h
src/Samples/ascendbase/src/Base/Statistic/: Statistic.cpp  Statistic.h
